# tauri-plugin-better-cors-fetch

./: .commitlintrc.json  .gitignore  .lintstagedrc.yaml  .markdownlint.json  .oxfmtrc.json  .releaserc.d.mts  .releaserc.mjs  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  commitlint.config.ts  cspell.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  tsdown.config.ts  vite.config.ts  words.txt
.cargo/: config.toml
.github/workflows/: build.yaml  lint.yaml
.husky/: commit-msg  pre-commit
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: clear_cookie.toml  delete_cookie.toml  fetch.toml  fetch_cancel.toml  fetch_cancel_body.toml  fetch_read_body.toml  fetch_send.toml  get_all_cookies.toml  get_all_domain_cookies.toml  get_cookie.toml  prepare_requester.toml  set_cookie.toml
permissions/schemas/: schema.json
script/: set-version.mts  update-version.mts
src/: commands.rs  cookies.rs  error.rs  headers.rs  lib.rs  request.rs  spawner.rs
src-web/: fetch.ts  index.ts  tsconfig.json  xhr.ts
src-web/types/: BasicAuth.ts  ClearCookiesConfig.ts  ClientConfig.ts  ContentConfig.ts  CookieEntry.ts  DangerousSettings.ts  DeleteCookieConfig.ts  FetchResponse.ts  GetAllCookiesConfig.ts  GetAllDomainCookiesConfig.ts  GetCookieConfig.ts  Proxy.ts  ProxyConfig.ts  SetCookieConfig.ts  UrlOrConfig.ts
src/commands/: cookie.rs  fetch.rs  mod.rs
