[package]
name = "tauri-plugin-better-cors-fetch"
version = "1.3.1"
description = "Enabling Cross-Origin Resource Sharing (CORS) for Fetch Requests within Tauri applications."
keywords = [ "tauri-plugin", "CORS", "fetch", "unofficial" ]
authors = [
  "Wenxig <wenxinguo12@gmail.com>",
  "Del Wang <hello@xbox.work>"
]
repository = "https://github.com/wenxig/tauri-plugin-better-cors-fetch"
documentation = "https://docs.rs/crate/tauri-plugin-better-cors-fetch"
license = "MIT"
license-file = "./LICENSE"
readme = "README.md"
edition = "2024"
rust-version = "1.95.0"
links = "tauri-plugin-better-cors-fetch"
publish = true

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[package.metadata.platforms.support.windows]
level = "full"
notes = ""

[package.metadata.platforms.support.linux]
level = "full"
notes = ""

[package.metadata.platforms.support.macos]
level = "full"
notes = ""

[package.metadata.platforms.support.android]
level = "full"
notes = ""

[package.metadata.platforms.support.ios]
level = "full"
notes = ""

[dependencies]
serde = "1"
serde_json = "1"
thiserror = "2"
url = "2.5.8"
http = "1.4.0"
data-url = "0.3"
ts-rs = "12.0.1"
dashmap = "6.1.0"
futures-util = "0.3.32"

  [dependencies.tauri]
  version = "2.10.3"
  default-features = false

  [dependencies.reqwest]
  version = "0.13.2"
  default-features = false
  features = [ "cookies" ]

  [dependencies.tokio]
  version = "1.52.1"
  features = [ "sync", "macros" ]

  [dependencies.cookie_store]
  version = "0.22.1"
  features = [ "serde" ]

  [dependencies.bytes]
  version = "1.11.1"

  [dependencies.tracing]
  version = "0.1"
  optional = true

[build-dependencies.tauri-plugin]
version = "2.5.4"
features = [ "build" ]

[features]
default = [
  "reqwest/default",
  "charset",
  "stream",
  "http2",
  "json",
  "system-proxy",
  "socks",
  "tracing"
]
tracing = [ "dep:tracing" ]
http2 = [ "reqwest/http2" ]
rustls = [ "reqwest/rustls" ]
rustls-no-provider = [ "reqwest/rustls-no-provider" ]
native-tls = [ "reqwest/native-tls" ]
native-tls-no-alpn = [ "reqwest/native-tls-no-alpn" ]
native-tls-vendored = [ "reqwest/native-tls-vendored" ]
native-tls-vendored-no-alpn = [ "reqwest/native-tls-vendored-no-alpn" ]
blocking = [ "reqwest/blocking" ]
charset = [ "reqwest/charset" ]
gzip = [ "reqwest/gzip" ]
brotli = [ "reqwest/brotli" ]
zstd = [ "reqwest/zstd" ]
deflate = [ "reqwest/deflate" ]
query = [ "reqwest/query" ]
form = [ "reqwest/form" ]
json = [ "reqwest/json" ]
multipart = [ "reqwest/multipart" ]
hickory-dns = [ "reqwest/hickory-dns" ]
stream = [ "reqwest/stream" ]
socks = [ "reqwest/socks" ]
system-proxy = [ "reqwest/system-proxy" ]
http3 = [ "reqwest/http3" ]
